--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
